# Yusi-Time

./: .gitignore  FRONTEND_SKILL.md  MASTER_PROMPT.md  PROJECT_STATE.md  docker-compose.yml  fix_animations.py  fix_animations2.py  fix_layout.py  fix_settingrow.py  fix_spacing.py  fix_workspace_schema.py
backend/: .coverage  .env.example  alembic_out.txt  check.py  check_400.py  check_422.py  check_api.py  check_api2.py  check_bob.py  check_db.py  check_entries.py  check_notifs.py  check_seed_entries.py  check_test2.py  check_test2_api.py  check_test2_notifs.py  check_users.py  check_ws.py  clear_db.py  clear_notifications.py  clear_notifs.py  convert_ddl.py  debug.py  debug_out.txt  gen_vapid.py  inspect_db.py  members_list.txt  notif_count.txt  notif_count2.txt  notifs_detail.txt  print_routes.py  pyproject.toml  query.py  query_api.py  reset_data.py  routes_order.txt  scaffold.py  seed_superadmin.py  seed_test_entries.py  sim.py  (+17 more)
backend/alembic/: env.py
backend/alembic/versions/: 20260526_0900_initial_schema.py  20260526_1000_add_weekly_report_type.py  20260531_1500_add_is_superadmin_to_users.py  20260603_1200_add_time_entries_and_time_entry_tags.py  20260621_2300_phase65_attendance_billable_push.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  attendance_notification.py  audit_log.py  client.py  invite.py  notification.py  password_reset_token.py  project.py  project_member.py  push_subscription.py  tag.py  (+9 more)
backend/tests/: conftest.py  test_setup.py
(+197 files in other folders)
