[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Yusi Time API"
authors = ["YusiTime AI Builder <builder@yusitime.local>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = "0.30.0"
sqlalchemy = "2.0.30"
asyncpg = "0.29.0"
alembic = "1.13.0"
pydantic = "2.8.0"
pydantic-settings = "2.3.0"
python-jose = "3.3.0"
argon2-cffi = "23.1.0"
httpx = "0.27.0"
slowapi = "0.1.9"
bleach = "6.1.0"
structlog = "24.4.0"
boto3 = "1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.0"
pytest-asyncio = "0.23.0"
pytest-mock = "3.14.0"
ruff = "0.4.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
